[package]
authors = ["Alasdair Pan <alasdairpan@gmail.com>"]
categories = ["development-tools::debugging"]
description = "A feature-rich log rotation library with timezone support, flexible rotation strategies, and compression, integrating seamlessly with the tracing ecosystem."
documentation = "https://docs.rs/logroller/"
edition = "2021"
keywords = ["logging", "tracing", "tracing-appender"]
license = "MIT"
name = "logroller"
readme = "README.md"
repository = "https://github.com/alasdairpan/logroller/"
version = "0.1.10"

[workspace.dependencies]
tracing-subscriber = {version = "0.3"}

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
flate2 = "1.0"
regex = "1"
thiserror = "1.0"
tracing-subscriber = {workspace = true, optional = true}
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = {workspace = true}

[features]
default = []
tracing = ["dep:tracing-subscriber"] # Deprecated feature maintained for compatibility
xz = ["dep:xz2"] # XZ compression support
